Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.861 devel


* Verilator 3.860 2014-05-11

**    PSL is no longer supported, please use System Verilog assertions.

**    Support '{} assignment pattern on arrays, bug355.

**    Support streaming operators, bug649. [Glen Gibb]

**    Fix expression problems with -Wno-WIDTH, bug729, bug736, bug737, bug759.
      Where WIDTH warnings were ignored this might result in different
      warning messages and results, though it should better match the spec.
      [Clifford Wolf]

***   Add --no-trace-params.

***   Add assertions on 'unique if', bug725. [Jeff Bush]

***   Add PINCONNECTEMPTY warning. [Holger Waechtler]

***   Support parameter arrays, bug683. [Jeremy Bennett]

***   Fix begin_keywords "1800+VAMS", msg1211.

****  Documentation fixes, bug723. [Glen Gibb]

****  Support {} in always sensitivity lists, bug745. [Igor Lesik]

****  Fix tracing of package variables and real arrays.

****  Fix tracing of packed arrays without --trace-structs, bug742. [Jie Xu]

****  Fix missing coverage line on else-if, bug727. [Sharad Bagri]

****  Fix modport function import not-found error.

****  Fix power operator calculation, bug730, bug735. [Clifford Wolf]

****  Fix reporting struct members as reserved words, bug741. [Chris Randall]

****  Fix change detection error on unions, bug758. [Jie Xu]

****  Fix -Wno-UNOPTFLAT change detection with 64-bits, bug762. [Clifford Wolf]

****  Fix shift-right optimization, bug763. [Clifford Wolf]

****  Fix Mac OS-X test issues. [Holger Waechtler]

****  Fix C++-2011 warnings.


* Verilator 3.856 2014-03-11

***   Support case inside, bug708. [Jan Egil Ruud]

***   Add parameters into trace files, bug706. [Alex Solomatnikov]

****  Fix parsing "#0 'b0", bug256.

****  Fix array bound checks on real variables.
